@@ -22,6 +22,12 @@
 
 	* lib/config.py: Adjust for change of domain name.
 
+	* bin/po-register, lib/localweb.py, bin/generate_pages:
+	Regenerate the team and domain pages after the relevant statistics
+	have been calculated.  Add the ability to generate the index pages.
+	Add a program to regenerate all pages in a single batch.
+
+
 2007-06-20  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/po-register: Stop gettextizing local progress and error
